# java_class_decoder

./: LICENSE  README.md
resource/: minimal.nested.wat  minimal.wasm  minimal.wat
src/: CMakeLists.txt  Statics.java  decode.cpp  decode_wasm.cpp
